--- a/app/static/css/dtr.css
+++ b/app/static/css/dtr.css
@@ -1,6 +1,7 @@
 body{
     background-color: black;
     color: white!important;
+    font-family: "Lora", serif!important;
 }
 
 .site-text{
@@ -60,10 +61,12 @@ h1{
     /* font-size: 21px; */
     font-weight: bold;
     color: #d8b077;
+    font-family: 'Apricot', sans-serif!important;
 }
 h2{
     font-weight: bold;
     color: #d8b077;
+    font-family: 'Apricot', sans-serif!important;
 }
 h3{
     font-size: 18px;
@@ -71,10 +74,12 @@ h3{
 h4{
     font-weight: bold;
     color: #d8b077!important;
+    font-family: 'Apricot', sans-serif!important;
 }
 h5{
     font-weight: bold;
     color: #d8b077!important;
+    font-family: 'Apricot', sans-serif!important;
 }
 .social_links{
     color: white!important;
@@ -155,4 +160,70 @@ body {
 
 .form-label{
     color: black;
+}
+
+#myVideo {
+    filter: blur(7px);
+    min-width: 100%;
+    height: 500px;
+    object-fit: cover;
+  }
+  .bio-section {
+    /* background-color: #f8f9fa; */
+    background-color: black;
+    /* background-color: #f8f9fa14; */
+    background:black;
+    border: #d4a373 1px solid;
+    padding: 40px;
+  }
+  .bio-text {
+      font-size: 1.2rem;
+      color: #fff;
+  }
+  .bio-title {
+      font-size: 2rem;
+      font-weight: bold;
+      color: #3a3a3a;
+      margin-bottom: 20px;
+  }
+  .get-in-touch-btn {
+      background-color: #d4a373;
+      color: white;
+      border: none;
+      padding: 10px 20px;
+      font-weight: bold;
+      margin-top: 20px;
+  }
+  .get-in-touch-btn:hover {
+      background-color: #d4a373;
+  }
+  .bio-image {
+      max-width: 100%;
+      height: auto;
+      border-radius: 8px;
+      margin: 5px;
+  }
+
+  .background-div {
+    width: 100%;                /* Full width of container */
+    background-image: url('/static/images/dtr.png'); /* Replace with your image path */
+    background-size: 50px 50px;            /* Image scaled to 100px */
+    background-repeat: repeat;               /* Repeats background */
+    background-color: rgba(0, 0, 0, 1); /* High transparency overlay */
+    position: relative;                      /* Ensure position for transparency overlay */
+}
+
+.background-div::before {
+    content: "";
+    /* position: absolute; */
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 0.1;              /* Set transparency level */
+    z-index: 0;                /* Background behind other content */
+}
+
+.modal-backdrop.show {
+    opacity: 0.9 !important;
 }
